[gd_scene load_steps=12 format=3 uid="uid://dj7br8u5ja4rm"]

[ext_resource type="Texture2D" uid="uid://dk2e2hl1ggea0" path="res://Assets/Sprites/TileSets/Prison/BridgeBreak.png" id="1_l5qrg"]
[ext_resource type="Script" path="res://Scripts/Objects/BreakingBridge.gd" id="2_o472l"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6jn0j"]
a = Vector2(-48, -7)
b = Vector2(48, -7)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6gje"]
atlas = ExtResource("1_l5qrg")
region = Rect2(96, 0, 96, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7e12"]
atlas = ExtResource("1_l5qrg")
region = Rect2(192, 0, 96, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rlwa"]
atlas = ExtResource("1_l5qrg")
region = Rect2(0, 0, 96, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gdjc7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6gje")
}],
"loop": true,
"name": &"BeginBreak",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7e12")
}],
"loop": true,
"name": &"Broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rlwa")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_h4uqb"]
offsets = PackedFloat32Array(0, 0.944444, 0.984127)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hhs8j"]
a = Vector2(0, -2.85896)
b = Vector2(0, 2.85896)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_372jn"]
a = Vector2(0, -16)
b = Vector2(0, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7ffl"]
size = Vector2(66, 2)

[node name="BreakingBridge" type="RigidBody2D"]
collision_layer = 8
freeze = true
script = ExtResource("2_o472l")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("SegmentShape2D_6jn0j")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_gdjc7")
animation = &"Idle"

[node name="BeginBreakParticles" type="CPUParticles2D" parent="."]
z_index = 3
position = Vector2(0, -3)
emitting = false
one_shot = true
explosiveness = 0.5
randomness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(45.31, 0)
direction = Vector2(0, -1)
spread = 0.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
scale_amount_min = 3.0
scale_amount_max = 4.0
color = Color(0.309804, 0.172549, 0.0431373, 1)
color_initial_ramp = SubResource("Gradient_h4uqb")

[node name="StartBreaking" type="Area2D" parent="."]
position = Vector2(-38, -21)
scale = Vector2(0.691429, 1.74889)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartBreaking"]
position = Vector2(-1.44628, 5.14612)
shape = SubResource("SegmentShape2D_hhs8j")

[node name="Broke" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Broke"]
position = Vector2(0, -13)
scale = Vector2(1, 0.24)
shape = SubResource("SegmentShape2D_372jn")

[node name="FloorCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_m7ffl")
one_way_collision_margin = 0.0

[connection signal="body_entered" from="StartBreaking" to="." method="_on_start_breaking_body_entered"]
[connection signal="body_entered" from="Broke" to="." method="_on_broke_body_entered"]
